Remove this "Integer" constructor